--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: package-info
 Section: main
 Priority: optional
 Maintainer: Moritz Lenz <moritz.lenz@gmail.com>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), dh-systemd
 Standards-Version: 3.9.5
 
 Package: package-info
